--- a/src/styles/responsive-layout.css
+++ b/src/styles/responsive-layout.css
@@ -18,6 +18,7 @@
     padding-left: 16px;
     padding-right: 16px;
     width: 100%;
+    margin-top: -60px; /* Move content up to reduce bottom space */
   }
   
   /* Center auth content properly */
